<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:layout_marginStart="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:paddingTop="60dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FF0000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_name_input"
        android:hint="@string/enter_item_name"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_description"
        android:id="@+id/item_text_view_description"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:padding="10dp"
        android:layout_marginTop="12dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_short_description"
        android:id="@+id/item_description_input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="180"
        android:background="@android:drawable/editbox_background"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_quantity"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#FF0000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_quantity_input"
        android:hint="@string/enter_item_quantity"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_sms_notifications"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="22dp" />
    <ToggleButton
        android:id="@+id/createItemActivity_smsTgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textColor="@color/material_dynamic_neutral30"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:text="@string/save_item"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:layout_gravity="bottom"/>

</LinearLayout>