<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_acct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical">

    <!-- First Name -->
    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="16sp"
        android:paddingTop="60dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etFirstName"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name" />

    <!-- Last Name -->
    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:hint="@string/enter_last_name" />

    <!-- Email Address -->
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:importantForAccessibility="yes" />

    <!-- Password -->
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_a_password"
        android:importantForAutofill="no"
        android:inputType="textPassword|textNoSuggestions"
        android:importantForAccessibility="yes" />

    <!-- Confirm Password -->
    <TextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword|textNoSuggestions" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_acct_password_fail"
        android:text="@string/passwords_don_t_match_please_re_enter"
        android:visibility="invisible"/>

    <!-- Create Account Button -->
    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/create_account" />

</LinearLayout>
