<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D1BFFD"
        android:paddingTop="100dp"
        android:paddingBottom="10dp"
        android:text="@string/inventory_dashboard"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="34sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="#E4DEE7"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="1dp"
        android:text="@string/username"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:autofillHints="emailAddress"
        android:hint="@string/enter_email"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="#E4DEE7" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Login Button -->
        <Button
            android:id="@+id/mainActivity_btn_login"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_selector"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

        <!-- Create Account Button -->
        <Button
            android:id="@+id/mainActivity_btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_selector"
        android:padding="0dp"
        android:text="@string/create_account"
        android:textColor="#CDDC39"
        android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
