<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/list_item_border"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="@string/test_item_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="#AA000000" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:maxLines="2"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_quantity_background"
        android:contentDescription="@string/item_quantity_label"
        android:gravity="center"
        android:text="@string/_10"
        android:textColor="#FF4081"
        android:textSize="16sp"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/btnDeleteItem"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_item_button"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_delete"
        app:tint="@color/material_dynamic_neutral30" />
</LinearLayout>
